--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,11 @@
-version: '3'
+version: '3.8'
+
 services:
-  eventak-app:
-    image: ghcr.io/mariam0ashraf/eventak-web:v1
+  frontend:
+    container_name: eventak_frontend
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8080:80"
-    restart: always
+    restart: unless-stopped
